tests/baselines/reference/namespacesDeclaration2.errors.txt
tests/cases/compiler/namespacesDeclaration2.ts(12,13): error TS2694: Namespace 'N' has no exported member 'S'.
tests/cases/compiler/namespacesDeclaration2.ts(13,12): error TS2694: Namespace 'M' has no exported member 'F'.
tests/cases/compiler/namespacesDeclaration2.ts(14,11): error TS2694: Namespace 'ns' has no exported member 'A'.


==== tests/cases/compiler/namespacesDeclaration2.ts (3 errors) ====
    namespace N {
        function S() {}
    }
    module M {
        function F() {}
    }
    
    declare namespace ns {
        let f: number;
    }
    
    var foge: N.S;
                ~
!!! error TS2694: Namespace 'N' has no exported member 'S'.
    var foo: M.F;
               ~
!!! error TS2694: Namespace 'M' has no exported member 'F'.
    let x: ns.A;
              ~
!!! error TS2694: Namespace 'ns' has no exported member 'A'.